--- a/Web.config
+++ b/Web.config
@@ -7,6 +7,13 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <caching>
+		<outputCache defaultProvider="MyRedisOutputCache">
+			<providers>
+				<add name="MyRedisOutputCache" type="Microsoft.Web.Redis.RedisOutputCacheProvider" connectionString="localhost"/>
+			</providers>
+		</outputCache>
+	</caching>
   </system.web>
   <system.codedom>
     <compilers>
@@ -14,12 +21,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.webServer>
-    <modules>
-      <remove name="OutputCache" />
-      <add name="OutputCache" type="Microsoft.AspNet.OutputCache.OutputCacheModuleAsync, Microsoft.AspNet.OutputCache.OutputCacheModuleAsync, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" preCondition="integratedMode" />
-    </modules>
-  </system.webServer>
+	<system.webServer>
+		<defaultDocument>
+			<files>
+				<add value="home.aspx" />
+			</files>
+		</defaultDocument>
+		<directoryBrowse enabled="false" />
+	</system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
